--- a/css/public.css
+++ b/css/public.css
@@ -8,8 +8,8 @@ h4 {
   }  
 .graphbox{
     border-radius: 25px;
-    border: 2px solid #000000;
-    padding: 20px;     
+    border: 2px solid #001E60;
+    padding: 10px;     
     
 }
 }
