--- a/css/main.css
+++ b/css/main.css
@@ -70,3 +70,8 @@ body {
     color: white;
     text-align: center;
 }
+.studentidphoto{
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
